Fixed weird sizing on mobile

--- a/styles/kstyle.css
+++ b/styles/kstyle.css
@@ -16,19 +16,21 @@
     --canary: #f4f482ff;
 }
 
-html, 
-.body {
-    margin:0;
-    padding:0;
-    height:100%;
+html {
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
 }
 
-.body {
-    display:flex; 
-    flex-direction:column; 
+body {
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+
+    display: flex; 
+    flex-direction: column; 
 
     font-family: Tahoma, Geneva, sans-serif;
-    min-height: 100%;
     background: var(--orchid-crayola);
 }
 
@@ -38,18 +40,20 @@ html,
 
 .header {
     width: 100%;
-    min-height: 3em;
+    height: 3em;
     background: var(--lavender-blush);
 }
 
 .nav {
     margin: 0 auto 0 auto;
 
-    width: var(--width-to-read);
+    width: 100%;
+    max-width: var(--width-to-read);
     height: 100%;
 
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
     grid-column-gap: 1em;
 }
 
@@ -67,16 +71,19 @@ html,
 */
 
 .main {
-    background: var(--lavender-blush);
     margin: 0 auto 0 auto;
-    width: var(--width-to-read);
+    width: 100%;
+    max-width: var(--width-to-read);
+
+    background: var(--lavender-blush);
 }
 
 .main--remaining {
     flex-grow : 1;
 
     margin: 0 auto 0 auto;
-    width: var(--width-to-read);
+    width: 100%;
+    max-width: var(--width-to-read);
     background: var(--lavender-blush);
 }
 
@@ -90,7 +97,8 @@ html,
 }
 .contacts {
     margin: 0 auto 0 auto;
-    width: var(--width-to-read);
+    width: 100%;
+    max-width: var(--width-to-read);
 }
 
 .socials {
@@ -121,7 +129,6 @@ html,
 
 }
 
-.feed__item:hover {
-    cursor: pointer;
-    background: white;
+.feed__item {
+
 }
